--- a/index.html.sample
+++ b/index.html.sample
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset='utf-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=11' />
-    <title>Docbox</title>
+    <title>HYCON REST API v1 | ENG | Hycon Public Blockchain</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link href='css/base.css' rel='stylesheet' />
     <link href='css/style.css' rel='stylesheet' />
     <link href='css/railscasts.css' rel='stylesheet' />
-  </head>
-  <body>
-    <!--START--><div id='app'></div><!--STOP-->
+    <link rel="shortcut icon" type="image/png" href="content/img/branding/img-logo.png" />
+</head>
+
+<body>
+    <!--START-->
+    <div id='app'></div>
+    <!--STOP-->
     <script src='bundle.js'></script>
-  </body>
+</body>
+
 </html>
